--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,8 @@ body {
   @apply font-inter;
 }
 
-input {
+input,
+textarea {
   @apply border-gray-300 rounded-lg shadow-sm;
   @apply appearance-none border w-full py-2 px-3 text-gray-700 leading-tight text-sm;
 }
